# project1-threat-intelligence-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DEMO.md  FOUR_WEEK_PLAN.md  KIBANA_DASHBOARD.md  OPERATIONS.md  THREAT_MODEL.md
src/tip/: __init__.py  alerts.py  api.py  cli.py  collector.py  config.py  models.py  normalization.py  policy.py  scoring.py  siem.py  storage.py
src/tip/feeds/: __init__.py  base.py  feodo.py  otx.py  threatfox.py  urlhaus.py
tests/: test_collector.py  test_normalization.py  test_policy.py  test_scoring.py
