[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tip-platform"
version = "0.1.0"
description = "Threat intelligence aggregation, SIEM export, and safe dynamic firewall policy enforcement"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "elasticsearch>=8.14,<9",
  "fastapi>=0.111,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "pymongo>=4.7,<5",
  "requests>=2.32,<3",
  "tenacity>=8.2,<10",
  "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7,<2",
  "mongomock>=4.1,<5",
  "pip-audit>=2.7,<3",
  "ruff>=0.5,<1",
  "pytest>=8,<9",
  "pytest-cov>=5,<7"
]

[project.scripts]
tipctl = "tip.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --disable-warnings"
